# qa_guru_lecture_20

./: README.md  browserstack_sample.py  pyproject.toml
