[tool.poetry]
name = "qa-guru-lecture-20"
version = "0.1.0"
description = ""
authors = ["juliacich100 <juliacich100@gmail.com>"]
readme = "README.md"
packages = [{include = "qa_guru_lecture_20"}]

[tool.poetry.dependencies]
python = "^3.10"
Appium-Python-Client = "^2.6.1"
selene = {version = "2.0.0b16", allow-prereleases = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
